--- a/.github/workflows/Build and Test Packages.yml
+++ b/.github/workflows/Build and Test Packages.yml
@@ -3,10 +3,9 @@ on:
   pull_request:
     branches: [main]
     paths:
-      # Adjusted to match the path used in your dotnet commands
       - 'src/DLLPickle.Build/**'
       - 'packages.lock.json'
-      - '.github/workflows/ci.yml' # Good practice to trigger on workflow changes too
+      - '.github/workflows/ci.yml'
 
 jobs:
   build-and-test:
@@ -17,7 +16,7 @@ jobs:
       pull-requests: write # Required for dependency review comments
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
