ci: Update path to build script

--- a/.github/workflows/Release and Publish.yml
+++ b/.github/workflows/Release and Publish.yml
@@ -253,7 +253,7 @@ jobs:
         with:
           path: |
             ~/.local/share/powershell/Modules
-          key: ${{ runner.os }}-psmodules-${{ hashFiles('src/DLLPickle.Build.ps1') }}
+          key: ${{ runner.os }}-psmodules-${{ hashFiles('build/DLLPickle.Build.ps1') }}
 
       - name: Bootstrap
         shell: pwsh
@@ -263,7 +263,7 @@ jobs:
         shell: pwsh
         run: |
           try {
-              Invoke-Build -File ./src/DLLPickle.Build.ps1
+              Invoke-Build -File 'build/DLLPickle.Build.ps1'
               Write-Host "✓ Build and tests passed" -ForegroundColor Green
           }
           catch {
@@ -503,5 +503,6 @@ jobs:
           "@
 
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value $summary
+
 
 
