--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -1,15 +1,15 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow checks out code, performs a Codacy security scan
-# and integrates the results with the
-# GitHub Advanced Security code scanning feature.  For more information on
-# the Codacy security scan action usage and parameters, see
-# https://github.com/codacy/codacy-analysis-cli-action.
-# For more information on Codacy Analysis CLI in general, see
-# https://github.com/codacy/codacy-analysis-cli.
+# This workflow performs a Codacy security scan and integrates
+# the results with GitHub's Advanced Security code scanning features.
+#
+# The scan runs on:
+# - Pushes to the main branch
+# - Pull requests against main
+# - Weekly schedule (Sundays at 12:38 UTC)
+#
+# For Codacy security scan action usage and parameters:
+# https://github.com/codacy/codacy-analysis-cli-action
+# For Codacy Analysis CLI documentation:
+# https://github.com/codacy/codacy-analysis-cli
 
 name: Codacy Security Scan
 
@@ -28,36 +28,40 @@ permissions:
 jobs:
   codacy-security-scan:
     permissions:
-      contents: read # for actions/checkout to fetch code
+      contents: read         # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-    name: Codacy Security Scan
+      actions: read          # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+    name: Security Scan (Codacy)
     runs-on: ubuntu-latest
-    # Skip this job for forked PRs since they won't have access to secrets and will have read-only GITHUB_TOKEN
-    if: github.event.pull_request.head.repo.full_name == github.repository || github.event_name != 'pull_request'
+    # Skip forked PRs: they lack access to secrets and have limited GITHUB_TOKEN permissions
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     steps:
-      # Checkout the repository to the GitHub Actions runner
+
       - name: Checkout code
         uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
-      # Execute Codacy Analysis CLI and generate a SARIF output with the security issues identified during the analysis
+      # Execute Codacy Analysis CLI and generate a SARIF output with security issues
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
         with:
           # Check https://github.com/codacy/codacy-analysis-cli#project-token to get your project token from your Codacy repository
           # You can also omit the token and run the tools that support default configurations
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          verbose: true
+          # Disable verbose to avoid exposing sensitive information in logs
+          verbose: false
+          # Output SARIF format for GitHub code scanning integration
           output: results.sarif
           format: sarif
-          # Adjust severity of non-security issues
+          # Make severity levels compatible with GitHub code scanning
           gh-code-scanning-compat: true
-          # Force 0 exit code to allow SARIF file generation
-          # This will handover control about PR rejection to the GitHub side
+          # Allow all issues to be reported (control comes from GitHub side)
+          # This enables GitHub to enforce severity policies and status checks
           max-allowed-issues: 2147483647
 
-      # Upload the SARIF file generated in the previous step
       - name: Upload SARIF results file
+        if: success() && hashFiles('results.sarif') != ''
         uses: github/codeql-action/upload-sarif@b5ebac6f4c00c8ccddb7cdcd45fdb248329f808a # v3.32.2
         with:
           sarif_file: results.sarif
+          # Wait for processing to ensure results appear in Security tab
+          wait-for-processing: true
