--- a/.github/workflows/Dependency-Review.yml
+++ b/.github/workflows/Dependency-Review.yml
@@ -1,37 +1,34 @@
-# Dependency Review Action
+# Dependency Review
 #
-# This Action will scan dependency manifest files that change as part of a Pull Request,
-# surfacing known-vulnerable versions of the packages declared or updated in the PR.
-# Once installed, if the workflow run is marked as required, PRs introducing known-vulnerable
-# packages will be blocked from merging.
+# This action will scan dependency manifest files that change as part of a Pull Request, surfacing known-vulnerable
+# versions of the packages declared or updated in the PR. Once installed, if the workflow run is marked as required,
+# PRs introducing known-vulnerable packages will be blocked from merging.
 #
 # Source repository: https://github.com/actions/dependency-review-action
 # Public documentation: https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain/about-dependency-review#dependency-review-enforcement
+
 name: 'Dependency Review'
 on:
   pull_request:
-    branches: [ "main" ]
 
-# If using a dependency submission action in this workflow this permission will need to be set to:
-#
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
+# If using a dependency submission action in this workflow this permission will need to be set to `write` and the `GITHUB_TOKEN` must be used to authenticate the submission.
+# https://docs.github.com/en/enterprise-cloud@latest/code-security/supply-chain-security/understanding-your-software-supply-chain/using-the-dependency-submission-api
 # permissions:
 #   contents: write
-#
-# https://docs.github.com/en/enterprise-cloud@latest/code-security/supply-chain-security/understanding-your-software-supply-chain/using-the-dependency-submission-api
+
 permissions:
   contents: read
-  pull-requests: write
   # Write permissions for pull-requests are required for using the `comment-summary-in-pr` option, comment out if you aren't using this option
-  # pull-requests: write
+  pull-requests: write
 
 jobs:
   dependency-review:
     runs-on: ubuntu-latest
     steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@5ef0c079ce82195b2a36a210272d6b661572d83e # v2.14.2
-        with:
-          egress-policy: audit
 
       - name: 'Checkout Repository'
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -43,4 +40,3 @@ jobs:
           comment-summary-in-pr: always
           fail-on-severity: moderate
           retry-on-snapshot-warnings: true
-        #   deny-licenses: GPL-1.0-or-later, LGPL-2.0-or-later
