--- a/.github/workflows/Supply-Chain-Security-Scorecards.yml
+++ b/.github/workflows/Supply-Chain-Security-Scorecards.yml
@@ -75,3 +75,5 @@ jobs:
         uses: github/codeql-action/upload-sarif@9e907b5e64f6b83e7804b09294d44122997950d6 # v4.32.3
         with:
           sarif_file: results.sarif
+          # Unique category to distinguish from other security scans
+          category: ossf-scorecards
